--- a/packages/browser-chat/frontend/package.json
+++ b/packages/browser-chat/frontend/package.json
@@ -11,12 +11,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-router-dom": "^6.4.3",
     "web-vitals": "^2.1.4",
     "@dao-xyz/wallet-adapter-base": "^0.0.5",
     "@dao-xyz/wallet-adapter-react": "^0.0.6",
     "@dao-xyz/wallet-adapter-material-ui": "^0.0.6",
     "@dao-xyz/wallet-adapter-wallets": "^0.0.8",
-    "@dao-xyz/peerbit": "^0.0.59",
+    "@dao-xyz/peerbit": "^0.0.60",
     "@dao-xyz/peerbit-example-browser-chat": "^0.0.1",
     "@mui/material": "^5.10.13",
     "@emotion/react": "^11.10.5",
