--- a/packages/browser-chat/frontend/package.json
+++ b/packages/browser-chat/frontend/package.json
@@ -17,7 +17,7 @@
         "@dao-xyz/wallet-adapter-react": "^0.0.6",
         "@dao-xyz/wallet-adapter-material-ui": "^0.0.6",
         "@dao-xyz/wallet-adapter-wallets": "^0.0.8",
-        "@dao-xyz/peerbit": "^0.0.62",
+        "@dao-xyz/peerbit": "^0.0.68",
         "@dao-xyz/peerbit-example-browser-chat": "^0.0.1",
         "@mui/material": "^5.10.13",
         "@emotion/react": "^11.10.5",
@@ -59,7 +59,7 @@
         ]
     },
     "scripts": {
-        "start": "REACT_APP_XYZ=ASD react-app-rewired start",
+        "start": "HOST=0.0.0.0 REACT_APP_NETWORK=local react-app-rewired start",
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
         "eject": "react-app-rewired eject"
