--- a/packages/browser-chat/frontend/package.json
+++ b/packages/browser-chat/frontend/package.json
@@ -2,6 +2,7 @@
     "name": "frontend",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://dao-xyz.github.io/peerbit-examples",
     "dependencies": {
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
@@ -17,7 +18,7 @@
         "@dao-xyz/wallet-adapter-react": "^0.0.6",
         "@dao-xyz/wallet-adapter-material-ui": "^0.0.6",
         "@dao-xyz/wallet-adapter-wallets": "^0.0.8",
-        "@dao-xyz/peerbit": "^0.0.70",
+        "@dao-xyz/peerbit": "^0.0.74",
         "@dao-xyz/peerbit-example-browser-chat": "^0.0.1",
         "@mui/material": "^5.10.13",
         "@emotion/react": "^11.10.5",
@@ -26,7 +27,8 @@
         "stream-browserify": "^3.0.0",
         "timers-browserify": "^2.0.12",
         "path-browserify": "^1.0.1",
-        "buffer": "^6.0.3"
+        "buffer": "^6.0.3",
+        "axios": "^1.2.0"
     },
     "devDependencies": {
         "@babel/eslint-parser": "^7.19.1",
@@ -36,7 +38,8 @@
         "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
         "@babel/plugin-transform-typescript": "^7.20.2",
         "react-app-rewired": "^2.2.1",
-        "customize-cra": "^1.0.0"
+        "customize-cra": "^1.0.0",
+        "gh-pages": "^4.0.0"
     },
     "eslintConfig": {
         "extends": [
@@ -60,8 +63,10 @@
     },
     "scripts": {
         "start": "HOST=0.0.0.0 REACT_APP_NETWORK=local react-app-rewired start",
+        "start-remote": "HOST=0.0.0.0 react-app-rewired start",
         "build": "react-app-rewired build",
         "test": "react-app-rewired test",
-        "eject": "react-app-rewired eject"
+        "eject": "react-app-rewired eject",
+        "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d build"
     }
 }
