update client for api

--- a/packages/browser-chat/frontend/package.json
+++ b/packages/browser-chat/frontend/package.json
@@ -4,6 +4,11 @@
     "private": true,
     "homepage": "https://dao-xyz.github.io/peerbit-examples",
     "dependencies": {
+        "@chainsafe/libp2p-noise": "^10.2.0",
+        "@libp2p/floodsub": "^5.0.0",
+        "@libp2p/websockets": "^5.0.0",
+        "@dao-xyz/peerbit": "^0.0.90",
+        "@dao-xyz/peerbit-example-browser-chat": "^0.0.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -14,13 +19,8 @@
         "react-scripts": "5.0.1",
         "react-router-dom": "^6.4.3",
         "web-vitals": "^2.1.4",
-        "@dao-xyz/wallet-adapter-base": "^0.0.5",
-        "@dao-xyz/wallet-adapter-react": "^0.0.6",
-        "@dao-xyz/wallet-adapter-material-ui": "^0.0.6",
-        "@dao-xyz/wallet-adapter-wallets": "^0.0.8",
-        "@dao-xyz/peerbit": "^0.0.74",
-        "@dao-xyz/peerbit-example-browser-chat": "^0.0.1",
         "@mui/material": "^5.10.13",
+        "@mui/icons-material": "^5.10.16",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "crypto-browserify": "^3.12.0",
