--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,5 @@
 {
-    "packages": ["packages/**"],
+    "packages": ["packages/react-utils", "packages/browser-chat/*"],
     "version": "independent",
     "npmClient": "yarn",
     "useWorkspaces": true
