--- a/packages/live-streaming/frontend/package.json
+++ b/packages/live-streaming/frontend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "chat-frontend",
+    "name": "streaming-frontend",
     "version": "0.1.0",
     "private": true,
     "homepage": "https://dao-xyz.github.io/peerbit-examples",
@@ -23,6 +23,9 @@
         "@mui/icons-material": "^5.10.16",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
+        "crypto-browserify": "^3.12.0",
+        "stream-browserify": "^3.0.0",
+        "timers-browserify": "^2.0.12",
         "path-browserify": "^1.0.1",
         "buffer": "^6.0.3",
         "axios": "^1.2.0"
@@ -36,7 +39,8 @@
         "@babel/plugin-transform-typescript": "^7.20.2",
         "react-app-rewired": "^2.2.1",
         "customize-cra": "^1.0.0",
-        "gh-pages": "^4.0.0"
+        "gh-pages": "^4.0.0",
+        "terser-webpack-plugin": "^5.3.6"
     },
     "eslintConfig": {
         "extends": [
