--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -1,14 +1,34 @@
 {
-    "name": "chat-frontend",
+    "name": "@dao-xyz/peerbit-react",
     "version": "0.1.0",
     "private": true,
     "homepage": "https://dao-xyz.github.io/peerbit-examples",
+    "main": "lib/cjs/index.js",
+    "module": "lib/esm/index.mjs",
+    "types": "lib/types/index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./lib/esm/index.mjs",
+            "require": "./lib/cjs/index.js"
+        },
+        "./package.json": "./package.json"
+    },
+    "files": [
+        "lib",
+        "src",
+        "LICENSE"
+    ],
+    "publishConfig": {
+        "access": "public"
+    },
+    "peerDependencies": {
+        "react": "*"
+    },
     "dependencies": {
         "@chainsafe/libp2p-noise": "^10.2.0",
         "@libp2p/floodsub": "^5.0.0",
         "@libp2p/websockets": "^5.0.0",
         "@dao-xyz/peerbit": "^0.0.94",
-        "@dao-xyz/peerbit-example-browser-chat": "^0.0.1",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
@@ -23,6 +43,9 @@
         "@mui/icons-material": "^5.10.16",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
+        "crypto-browserify": "^3.12.0",
+        "stream-browserify": "^3.0.0",
+        "timers-browserify": "^2.0.12",
         "path-browserify": "^1.0.1",
         "buffer": "^6.0.3",
         "axios": "^1.2.0"
@@ -36,7 +59,14 @@
         "@babel/plugin-transform-typescript": "^7.20.2",
         "react-app-rewired": "^2.2.1",
         "customize-cra": "^1.0.0",
-        "gh-pages": "^4.0.0"
+        "gh-pages": "^4.0.0",
+        "terser-webpack-plugin": "^5.3.6"
+    },
+    "scripts": {
+        "clean": "shx rm -rf lib/*",
+        "build": "yarn clean && tsc -p tsconfig.json",
+        "test": "jest",
+        "postbuild": "echo '{\"type\":\"module\"} ' | node ../../node_modules/.bin/json > lib/esm/package.json"
     },
     "eslintConfig": {
         "extends": [
@@ -57,13 +87,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "scripts": {
-        "start": "HOST=0.0.0.0 REACT_APP_NETWORK=local react-app-rewired start",
-        "start-remote": "HOST=0.0.0.0 react-app-rewired start",
-        "build": "react-app-rewired build",
-        "test": "react-app-rewired test",
-        "eject": "react-app-rewired eject",
-        "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d build"
     }
 }
