--- a/packages/browser-chat/frontend/public/manifest.json
+++ b/packages/browser-chat/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Peerbit node",
-    "name": "Peerbit node",
+    "short_name": "Chat",
+    "name": "Chat",
     "icons": [
         {
             "src": "favicon.ico",
