--- a/packages/live-streaming/frontend/public/manifest.json
+++ b/packages/live-streaming/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Peerbit node",
-    "name": "Peerbit node",
+    "short_name": "Livestream",
+    "name": "Livestream",
     "icons": [
         {
             "src": "favicon.ico",
