--- a/packages/live-streaming/frontend/tsconfig.json
+++ b/packages/live-streaming/frontend/tsconfig.json
@@ -2,7 +2,11 @@
     "compilerOptions": {
         "target": "es2021",
         "module": "esnext",
-        "lib": ["dom", "dom.iterable", "esnext"],
+        "lib": [
+            "dom",
+            "dom.iterable",
+            "esnext"
+        ],
         "moduleResolution": "node",
         "allowJs": true,
         "skipLibCheck": true,
@@ -16,7 +20,12 @@
         "noEmit": true,
         "jsx": "react-jsx",
         "experimentalDecorators": true,
-        "typeRoots": ["node_modules/@types"]
+        "typeRoots": [
+            "node_modules/@types"
+        ]
     },
-    "include": ["src", "config-overrides.js"]
+    "include": [
+        "src",
+        "config-overrides.js"
+    ]
 }
