--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -25,26 +25,18 @@
         "@chainsafe/libp2p-noise": "^10.2.0",
         "@libp2p/floodsub": "^5.0.0",
         "@libp2p/websockets": "^5.0.0",
-        "@dao-xyz/peerbit": "^0.0.94",
-        "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^13.5.0",
+        "@dao-xyz/peerbit": "^0.0.101",
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.0.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-scripts": "5.0.1",
         "react-router-dom": "^6.4.3",
-        "web-vitals": "^2.1.4",
         "@mui/material": "^5.10.13",
         "@mui/icons-material": "^5.10.16",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
-        "crypto-browserify": "^3.12.0",
-        "stream-browserify": "^3.0.0",
-        "timers-browserify": "^2.0.12",
         "path-browserify": "^1.0.1",
-        "buffer": "^6.0.3",
         "axios": "^1.2.0"
     },
     "devDependencies": {
@@ -56,8 +48,7 @@
         "@babel/plugin-transform-typescript": "^7.20.2",
         "react-app-rewired": "^2.2.1",
         "customize-cra": "^1.0.0",
-        "gh-pages": "^4.0.0",
-        "terser-webpack-plugin": "^5.3.6"
+        "gh-pages": "^4.0.0"
     },
     "scripts": {
         "clean": "shx rm -rf lib/*",
