--- a/packages/browser-chat/frontend/package.json
+++ b/packages/browser-chat/frontend/package.json
@@ -3,39 +3,38 @@
     "version": "0.1.0",
     "private": true,
     "homepage": "https://dao-xyz.github.io/peerbit-examples",
+    "type": "module",
+    "scripts": {
+        "dev": "vite",
+        "start": "vite",
+        "start-remote": "vite --mode staging",
+        "build": "tsc && vite build",
+        "preview": "vite preview",
+        "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d build"
+    },
     "dependencies": {
-        "@dao-xyz/peerbit": "^0.0.101",
+        "ts-ebml": "^2.0.2",
+        "@dao-xyz/peerbit": "*",
+        "@dao-xyz/peerbit-document": "*",
         "@dao-xyz/peerbit-example-browser-chat": "^0.0.1",
         "@dao-xyz/peerbit-react": "^0.0.1",
-        "@types/react": "^18.0.25",
-        "@types/react-dom": "^18.0.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
-        "react-router-dom": "^6.4.3",
-        "@mui/material": "^5.10.13",
-        "@mui/icons-material": "^5.10.16",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
-        "path-browserify": "^1.0.1",
-        "axios": "^1.2.0"
+        "@mui/material": "^5.10.13",
+        "react-scripts": "5.0.1",
+        "react-router-dom": "^6.8.0",
+        "@mui/icons-material": "^5.10.16"
     },
     "devDependencies": {
-        "@babel/eslint-parser": "^7.19.1",
-        "babel-eslint": "^10.1.0",
-        "eslint-config-react-app": "^7.0.1",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
-        "@babel/plugin-transform-typescript": "^7.20.2",
-        "react-app-rewired": "^2.2.1",
-        "customize-cra": "^1.0.0",
+        "@types/react": "^18.0.26",
+        "@types/react-dom": "^18.0.9",
+        "@vitejs/plugin-react": "^3.0.0",
+        "typescript": "^4.9.3",
+        "vite": "^4.0.4",
+        "@rollup/plugin-node-resolve": "^15.0.1",
         "gh-pages": "^4.0.0"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
     },
     "browserslist": {
         "production": [
@@ -50,13 +49,5 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    },
-    "scripts": {
-        "start": "HOST=0.0.0.0 REACT_APP_NETWORK=local react-app-rewired start",
-        "start-remote": "HOST=0.0.0.0 react-app-rewired start",
-        "build": "react-app-rewired build",
-        "test": "react-app-rewired test",
-        "eject": "react-app-rewired eject",
-        "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d build"
     }
 }
