--- a/packages/browser-chat/frontend/tsconfig.json
+++ b/packages/browser-chat/frontend/tsconfig.json
@@ -1,22 +1,26 @@
 {
     "compilerOptions": {
-        "target": "es2021",
-        "module": "esnext",
-        "lib": ["dom", "dom.iterable", "esnext"],
-        "moduleResolution": "node",
-        "allowJs": true,
+        "target": "es2022",
+        "useDefineForClassFields": true,
+        "lib": ["DOM", "DOM.Iterable", "Es2022"],
+        "allowJs": false,
         "skipLibCheck": true,
-        "esModuleInterop": true,
+        "esModuleInterop": false,
         "allowSyntheticDefaultImports": true,
         "strict": false,
         "forceConsistentCasingInFileNames": true,
-        "noFallthroughCasesInSwitch": true,
+        "module": "es2022",
+        "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "noEmit": true,
-        "jsx": "react-jsx",
         "experimentalDecorators": true,
-        "typeRoots": ["node_modules/@types"]
+        "noEmit": true,
+        "jsx": "react-jsx"
     },
-    "include": ["src", "config-overrides.js"]
+    "include": ["src"],
+    "references": [
+        {
+            "path": "./tsconfig.node.json"
+        }
+    ]
 }
