--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,7 @@
     "compilerOptions": {
         "target": "ES2022",
         "module": "ES2022",
-        "lib": [
-            "ES2021",
-            "ES2021.Promise",
-            "ES2021.String",
-            "ES2020.BigInt",
-            "DOM"
-        ],
+        "lib": ["Es2022", "DOM"],
         "moduleResolution": "node",
         "strict": true,
         "strictPropertyInitialization": false,
