--- a/packages/browser-chat/frontend/package.json
+++ b/packages/browser-chat/frontend/package.json
@@ -13,6 +13,7 @@
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
+        "axios": "^1.3.2",
         "ts-ebml": "^2.0.2",
         "@dao-xyz/peerbit": "*",
         "@dao-xyz/peerbit-document": "*",
