--- a/packages/live-streaming/frontend/package.json
+++ b/packages/live-streaming/frontend/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "start": "vite",
+        "start": "vite --https false",
         "start-remote": "vite --mode staging",
         "build": "tsc && vite build",
         "preview": "vite preview",
@@ -28,6 +28,7 @@
         "@mui/icons-material": "^5.10.16"
     },
     "devDependencies": {
+        "@types/dom-webcodecs": "^0.1.5",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
         "@vitejs/plugin-react": "^3.0.0",
