--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       run: yarn install && yarn build
 
     - name: Deploy static site to S3 bucket
-      run: aws s3 sync ./packages/live-streaming/frontend/dist/ s3://stream-peerchecker-com-dist --delete
+      run: aws s3 sync ./packages/live-streaming/frontend/dist/ s3://stream-dao-xyz-dist --delete
 
     - name: Invalidate cache
-      run: aws cloudfront create-invalidation --distribution-id E3FMW2ULSOH2AE --paths '/*';
+      run: aws cloudfront create-invalidation --distribution-id E1PSJ5WBHQ2CWQ --paths '/*';
