--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -45,7 +45,10 @@
         "@babel/plugin-transform-typescript": "^7.20.2",
         "react-app-rewired": "^2.2.1",
         "customize-cra": "^1.0.0",
-        "gh-pages": "^4.0.0"
+        "gh-pages": "^4.0.0",
+        "@types/sinon": "^10.0.13",
+        "sinon": "^15.0.1",
+        "node-localstorage": "^2.2.1"
     },
     "scripts": {
         "clean": "shx rm -rf lib/*",
