--- a/lerna.json
+++ b/lerna.json
@@ -3,6 +3,7 @@
         "packages/react-utils",
         "packages/browser-chat/*",
         "packages/live-streaming/*",
+        "packages/canvas/*",
         "packages/online-transfer-learning/*"
     ],
     "version": "independent",
