--- a/packages/canvas/frontend/package.json
+++ b/packages/canvas/frontend/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "start": "vite --https false",
+        "start": "vite",
         "start-https": "vite",
         "start-remote": "vite --mode staging",
         "build": "tsc && vite build",
@@ -14,6 +14,7 @@
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
+        "iframe-resizer": "^4.3.4",
         "axios": "^1.3.2",
         "@dao-xyz/peerbit": "*",
         "@dao-xyz/peerbit-document": "*",
