--- a/lerna.json
+++ b/lerna.json
@@ -4,6 +4,7 @@
         "packages/browser-chat/*",
         "packages/live-streaming/*",
         "packages/canvas/*",
+        "packages/one-chat-room/*",
         "packages/online-transfer-learning/*"
     ],
     "version": "independent",
