--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
             "packages/react-utils",
             "packages/browser-chat/*",
             "packages/live-streaming/*",
+            "packages/name-service/*",
             "packages/canvas/*",
             "packages/one-chat-room/*",
             "packages/online-transfer-learning/*"
@@ -43,8 +44,8 @@
         "nuke": "shx rm -rf {.,packages/*/*}/{node_modules,yarn.lock}"
     },
     "dependencies": {
-        "@dao-xyz/peerbit": "0.1.35",
-        "@dao-xyz/peerbit-document": "^0.1.34",
+        "@dao-xyz/peerbit": "^0.2.1",
+        "@dao-xyz/peerbit-document": "^0.2.1",
         "@dao-xyz/peerbit-test-utils": "^0.1.23"
     },
     "devDependencies": {
