--- a/packages/canvas/frontend/package.json
+++ b/packages/canvas/frontend/package.json
@@ -14,6 +14,7 @@
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
+        "@dao-xyz/peer-names": "^0.0.1",
         "iframe-resizer": "^4.3.4",
         "axios": "^1.3.2",
         "@dao-xyz/peerbit": "*",
