--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,4 +41,13 @@ jobs:
       run: aws cloudfront create-invalidation --distribution-id E39RSPI7MIQNW2 --paths '/*';
 
 
+    - name: Deploy ml demo
+      run: aws s3 sync ./packages/online-transfer-learning/frontend/dist/ s3://mldemo-dao-xyz-dist --delete
+
+    - name: Invalidate cache
+      run: aws cloudfront create-invalidation --distribution-id E371A736SNF0PO --paths '/*';
+
+
+
+
 
