--- a/packages/collaborative-learning/frontend/package.json
+++ b/packages/collaborative-learning/frontend/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "online-transfer-learning",
+    "name": "collaborative-learning",
     "version": "0.0.1",
     "private": true,
     "homepage": "https://dao-xyz.github.io/peerbit-examples",
