--- a/packages/collaborative-learning/frontend/public/manifest.json
+++ b/packages/collaborative-learning/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Livestream",
-    "name": "Livestream",
+    "short_name": "TransferLearning",
+    "name": "TransferLearning",
     "icons": [
         {
             "src": "favicon.ico",
