--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
             "packages/react-utils",
             "packages/browser-chat/*",
             "packages/live-streaming/*",
+            "packages/live-streaming-canvas/*",
             "packages/name-service/*",
             "packages/canvas/*",
             "packages/one-chat-room/*",
@@ -44,9 +45,9 @@
         "nuke": "shx rm -rf {.,packages/*/*}/{node_modules,yarn.lock}"
     },
     "dependencies": {
-        "@dao-xyz/peerbit": "^0.2.2",
-        "@dao-xyz/peerbit-document": "^0.2.2",
-        "@dao-xyz/peerbit-test-utils": "^0.1.24"
+        "@dao-xyz/peerbit": "^0.3.7",
+        "@dao-xyz/peerbit-document": "^0.3.7",
+        "@dao-xyz/peerbit-test-utils": "^0.1.27"
     },
     "devDependencies": {
         "@types/eslint": "^8.2.1",
@@ -64,7 +65,6 @@
         "eslint-plugin-prettier": "^4.2.1",
         "gh-pages": "^4.0.0",
         "dotenv": "^16.0.3",
-        "ipfs-core-types": "^0.13.0",
         "jest": "^29.3.1",
         "jest-extended": "^3.1.0",
         "json": "^11.0.0",
