--- a/packages/live-streaming/frontend/package.json
+++ b/packages/live-streaming/frontend/package.json
@@ -28,6 +28,7 @@
         "@mui/icons-material": "^5.10.16"
     },
     "devDependencies": {
+        "@types/dom-mediacapture-transform": "^0.1.4",
         "@types/dom-webcodecs": "^0.1.5",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
