--- a/packages/canvas/frontend/package.json
+++ b/packages/canvas/frontend/package.json
@@ -8,19 +8,18 @@
         "dev": "vite",
         "start": "vite",
         "start-https": "vite",
-        "start-remote": "vite --mode staging",
+        "start-remote": "vite --mode staging --config vite.config.remote.ts",
         "build": "tsc && vite build",
         "preview": "vite preview",
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
+        "react-grid-layout-next": "^2.2.0",
         "@dao-xyz/peer-names": "^0.0.1",
         "iframe-resizer": "^4.3.4",
-        "axios": "^1.3.2",
         "@dao-xyz/peerbit": "*",
         "@dao-xyz/peerbit-document": "*",
         "@dao-xyz/peerbit-react": "^0.0.1",
-        "ts-ebml": "^2.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "@emotion/react": "^11.10.5",
@@ -31,7 +30,6 @@
         "@mui/icons-material": "^5.10.16"
     },
     "devDependencies": {
-        "@types/dom-webcodecs": "^0.1.5",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
         "@vitejs/plugin-react": "^3.0.0",
