--- a/packages/iframe-resizer/package.json
+++ b/packages/iframe-resizer/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@dao-xyz/peerbit-react",
+    "name": "@dao-xyz/iframe-resizer",
     "version": "0.0.1",
     "homepage": "https://dao-xyz.github.io/peerbit-examples",
     "module": "lib/esm/index.js",
@@ -21,35 +21,8 @@
     "peerDependencies": {
         "react": "*"
     },
-    "dependencies": {
-        "@dao-xyz/libp2p-webrtc": "^1.2.0",
-        "@dao-xyz/peerbit": "*",
-        "@types/react": "^18.0.25",
-        "@types/react-dom": "^18.0.8",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
-        "react-router-dom": "^6.8.0",
-        "@mui/material": "^5.10.13",
-        "@mui/icons-material": "^5.10.16",
-        "@emotion/react": "^11.10.5",
-        "@emotion/styled": "^11.10.5",
-        "path-browserify": "^1.0.1"
-    },
-    "devDependencies": {
-        "@babel/eslint-parser": "^7.19.1",
-        "babel-eslint": "^10.1.0",
-        "eslint-config-react-app": "^7.0.1",
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-        "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
-        "@babel/plugin-transform-typescript": "^7.20.2",
-        "react-app-rewired": "^2.2.1",
-        "customize-cra": "^1.0.0",
-        "gh-pages": "^4.0.0",
-        "@types/sinon": "^10.0.13",
-        "sinon": "^15.0.1",
-        "node-localstorage": "^2.2.1"
-    },
+    "dependencies": {},
+    "devDependencies": {},
     "scripts": {
         "clean": "shx rm -rf lib/*",
         "build": "yarn clean && tsc -p tsconfig.json",
