--- a/packages/live-streaming-canvas/frontend/package.json
+++ b/packages/live-streaming-canvas/frontend/package.json
@@ -7,17 +7,15 @@
     "scripts": {
         "dev": "vite",
         "start": "vite",
-        "start-remote": "vite --mode staging",
+        "start-remote": "vite --mode staging --config vite.config.remote.ts",
         "build": "tsc && vite build",
         "preview": "vite preview",
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
-        "axios": "^1.3.2",
         "@dao-xyz/peerbit": "*",
         "@dao-xyz/peerbit-document": "*",
         "@dao-xyz/peerbit-react": "^0.0.1",
-        "ts-ebml": "^2.0.2",
         "extendable-media-recorder": "^7.1.7",
         "extendable-media-recorder-wav-encoder": "^7.0.84",
         "react": "^18.2.0",
