--- a/packages/one-chat-room/frontend/package.json
+++ b/packages/one-chat-room/frontend/package.json
@@ -7,13 +7,12 @@
     "scripts": {
         "dev": "vite",
         "start": "vite",
-        "start-remote": "vite --mode staging",
+        "start-remote": "vite --mode staging --config vite.config.remote.ts",
         "build": "tsc && vite build",
         "preview": "vite preview",
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
-        "axios": "^1.3.2",
         "@dao-xyz/peerbit": "*",
         "@dao-xyz/peerbit-document": "*",
         "@dao-xyz/peerbit-react": "^0.0.1",
