--- a/packages/live-streaming/frontend/tsconfig.json
+++ b/packages/live-streaming/frontend/tsconfig.json
@@ -18,6 +18,7 @@
         "jsx": "react-jsx",
         "types": [
             "@types/dom-webcodecs",
+            "@types/audioworklet",
             "@types/dom-mediacapture-transform",
             "@webgpu/types"
         ]
