--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "packages": [
             "packages/react-utils",
             "packages/browser-chat/*",
+            "packages/file-share/*",
             "packages/live-streaming/*",
             "packages/live-streaming-canvas/*",
             "packages/name-service/*",
@@ -45,12 +46,12 @@
         "nuke": "shx rm -rf {.,packages/*/*}/{node_modules,yarn.lock}"
     },
     "dependencies": {
-        "@dao-xyz/peerbit": "^0.8.6",
-        "@dao-xyz/peerbit-document": "^0.8.5",
-        "@dao-xyz/peerbit-test-utils": "^0.4.1"
+        "@dao-xyz/peerbit": "^1.0.5",
+        "@dao-xyz/peerbit-document": "^1.0.5",
+        "@dao-xyz/peerbit-test-utils": "^1.0.4"
     },
     "devDependencies": {
-        "@types/eslint": "^8.2.1",
+        "@types/eslint": "^8.40.2",
         "@types/eslint-plugin-prettier": "^3.1.0",
         "@types/jest": "^29.2.3",
         "@types/node": "^17.0.32",
@@ -65,9 +66,8 @@
         "eslint-plugin-prettier": "^4.2.1",
         "gh-pages": "^4.0.0",
         "dotenv": "^16.0.3",
-        "jest": "^29.3.1",
-        "jest-extended": "^3.1.0",
-        "json": "^11.0.0",
+        "jest": "^29.5.0",
+        "jest-extended": "^4.0.0",
         "lerna": "^5.5.1",
         "prettier": "^2.7.1",
         "shx": "^0.3.4",
@@ -76,9 +76,7 @@
         "ts-node": "^10.9.1",
         "tslib": "^2.4.1",
         "typedoc": "^0.23.17",
-        "typescript": "^4.8.4",
-        "typescript-esm": "^2.0.0",
-        "rimraf": "^3.0.2",
-        "fs-extra": "^10.1.0"
+        "typescript": "^5.1.3",
+        "typescript-esm": "^2.0.0"
     }
 }
