--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
         "nuke": "shx rm -rf {.,packages/*/*}/{node_modules,yarn.lock}"
     },
     "dependencies": {
-        "@dao-xyz/peerbit": "^1.0.5",
-        "@dao-xyz/peerbit-document": "^1.0.5",
-        "@dao-xyz/peerbit-test-utils": "^1.0.4"
+        "peerbit": "^1.0.4",
+        "@peerbit/document": "^1.1.0",
+        "@peerbit/test-utils": "^1.0.5"
     },
     "devDependencies": {
         "@types/eslint": "^8.40.2",
@@ -77,6 +77,7 @@
         "tslib": "^2.4.1",
         "typedoc": "^0.23.17",
         "typescript": "^5.1.3",
-        "typescript-esm": "^2.0.0"
+        "typescript-esm": "^2.0.0",
+        "json": "^11.0.0"
     }
 }
