--- a/packages/canvas/frontend/package.json
+++ b/packages/canvas/frontend/package.json
@@ -15,11 +15,11 @@
     },
     "dependencies": {
         "react-grid-layout-next": "^2.2.0",
-        "@dao-xyz/peer-names": "^0.0.1",
+        "@peerbit/peer-names": "^0.0.1",
         "iframe-resizer": "^4.3.4",
-        "@dao-xyz/peerbit": "*",
-        "@dao-xyz/peerbit-document": "*",
-        "@dao-xyz/peerbit-react": "^0.0.1",
+        "peerbit": "*",
+        "@peerbit/document": "*",
+        "@peerbit/react": "^0.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "@emotion/react": "^11.10.5",
