--- a/packages/browser-chat/frontend/package.json
+++ b/packages/browser-chat/frontend/package.json
@@ -19,10 +19,10 @@
         "@peerbit/react": "^0.0.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-use": "^17.4.0",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
         "@mui/material": "^5.10.13",
-        "react-scripts": "5.0.1",
         "react-router-dom": "^6.8.0",
         "@mui/icons-material": "^5.10.16"
     },
@@ -32,7 +32,6 @@
         "@vitejs/plugin-react": "^3.0.0",
         "typescript": "^5.1.3",
         "vite": "^4.3.9",
-        "@rollup/plugin-node-resolve": "^15.0.1",
         "gh-pages": "^4.0.0"
     },
     "browserslist": {
