--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -28,7 +28,7 @@
         "@types/react-dom": "^18.0.8",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-scripts": "5.0.1",
+        "react-use": "^17.4.0",
         "react-router-dom": "^6.8.0",
         "@mui/material": "^5.10.13",
         "@mui/icons-material": "^5.10.16",
@@ -37,14 +37,9 @@
         "path-browserify": "^1.0.1"
     },
     "devDependencies": {
-        "@babel/eslint-parser": "^7.19.1",
-        "babel-eslint": "^10.1.0",
-        "eslint-config-react-app": "^7.0.1",
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
         "@babel/plugin-transform-typescript": "^7.20.2",
-        "react-app-rewired": "^2.2.1",
-        "customize-cra": "^1.0.0",
         "gh-pages": "^4.0.0",
         "@types/sinon": "^10.0.13",
         "sinon": "^15.0.1",
