--- a/packages/file-share/cli/package.json
+++ b/packages/file-share/cli/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "file-share",
+    "name": "plopp",
     "version": "0.0.1",
     "author": "dao.xyz",
     "repository": "https://github.com/@dao-xyz/peerbit-examples",
