--- a/packages/file-share/cli/package.json
+++ b/packages/file-share/cli/package.json
@@ -1,6 +1,6 @@
 {
     "name": "plopp",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "author": "dao.xyz",
     "repository": "https://github.com/@dao-xyz/peerbit-examples",
     "license": "Apache-2.0",
@@ -38,16 +38,16 @@
         "test:integration": "node ../../../node_modules/.bin/jest test -c  ../../../jest.config.integration.ts --runInBand --forceExit"
     },
     "devDependencies": {
-        "peerbit": "*",
-        "@peerbit/network-utils": "^0.0.1",
+        "@peerbit/network-utils": "^0.0.2",
         "@peerbit/test-utils": "*",
-        "typescript": "^5.1.3",
-        "@types/yargs": "^17.0.24"
+        "@types/yargs": "^17.0.24",
+        "peerbit": "*",
+        "typescript": "^5.1.3"
     },
     "dependencies": {
-        "@peerbit/file-share": "^0.0.1",
-        "yargs": "^17.7.2",
-        "chalk": "^5.3.0"
+        "@peerbit/file-share": "^0.0.2",
+        "chalk": "^5.3.0",
+        "yargs": "^17.7.2"
     },
     "peerDependencies": {
         "peerbit": "*"
