--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@peerbit/react",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "homepage": "https://dao-xyz.github.io/peerbit-examples",
     "module": "lib/esm/index.js",
     "types": "lib/esm/index.d.ts",
@@ -22,29 +22,29 @@
         "react": "*"
     },
     "dependencies": {
-        "@libp2p/webrtc": "^2.0.11",
-        "@peerbit/network-utils": "^0.0.1",
-        "peerbit": "*",
-        "@types/react": "^18.0.25",
-        "@types/react-dom": "^18.0.8",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-use": "^17.4.0",
-        "react-router-dom": "^6.8.0",
-        "@mui/material": "^5.10.13",
-        "@mui/icons-material": "^5.10.16",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
-        "path-browserify": "^1.0.1"
+        "@libp2p/webrtc": "^2.0.11",
+        "@mui/icons-material": "^5.10.16",
+        "@mui/material": "^5.10.13",
+        "@peerbit/network-utils": "^0.0.2",
+        "@types/react": "^18.0.25",
+        "@types/react-dom": "^18.0.8",
+        "path-browserify": "^1.0.1",
+        "peerbit": "*",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-router-dom": "^6.8.0",
+        "react-use": "^17.4.0"
     },
     "devDependencies": {
-        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
+        "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/plugin-transform-typescript": "^7.20.2",
-        "gh-pages": "^4.0.0",
         "@types/sinon": "^10.0.13",
-        "sinon": "^15.0.1",
-        "node-localstorage": "^2.2.1"
+        "gh-pages": "^4.0.0",
+        "node-localstorage": "^2.2.1",
+        "sinon": "^15.0.1"
     },
     "scripts": {
         "clean": "shx rm -rf lib/*",
