--- a/packages/file-share/cli/package.json
+++ b/packages/file-share/cli/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "plopp",
+    "name": "@peerbit/please",
     "version": "0.0.2",
     "author": "dao.xyz",
     "repository": "https://github.com/@dao-xyz/peerbit-examples",
