--- a/packages/canvas/frontend/package.json
+++ b/packages/canvas/frontend/package.json
@@ -17,9 +17,9 @@
         "react-grid-layout-next": "^2.2.0",
         "@peerbit/peer-names": "^0.0.1",
         "iframe-resizer": "^4.3.4",
-        "peerbit": "*",
-        "@peerbit/document": "*",
-        "@peerbit/react": "^0.0.1",
+        "peerbit": "^1.1.5",
+        "@peerbit/document": "^1.1.8",
+        "@peerbit/react": "^0.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-use": "^17.4.0",
