--- a/packages/file-share/cli/package.json
+++ b/packages/file-share/cli/package.json
@@ -39,9 +39,9 @@
     },
     "devDependencies": {
         "@peerbit/network-utils": "^0.0.2",
-        "@peerbit/test-utils": "*",
+        "@peerbit/test-utils": "^1.0.12",
         "@types/yargs": "^17.0.24",
-        "peerbit": "*",
+        "peerbit": "^1.1.5",
         "typescript": "^5.1.3"
     },
     "dependencies": {
@@ -50,6 +50,6 @@
         "yargs": "^17.7.2"
     },
     "peerDependencies": {
-        "peerbit": "*"
+        "peerbit": "^1.1.5"
     }
 }
