--- a/packages/live-streaming/frontend/package.json
+++ b/packages/live-streaming/frontend/package.json
@@ -13,9 +13,9 @@
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
-        "peerbit": "*",
-        "@peerbit/document": "*",
-        "@peerbit/react": "^0.0.1",
+        "peerbit": "^1.1.5",
+        "@peerbit/document": "^1.1.8",
+        "@peerbit/react": "^0.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-use": "^17.4.0",
