--- a/packages/many-chat-rooms/frontend/package.json
+++ b/packages/many-chat-rooms/frontend/package.json
@@ -13,10 +13,10 @@
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
-        "peerbit": "*",
-        "@peerbit/document": "*",
+        "peerbit": "^1.1.5",
+        "@peerbit/document": "^1.1.8",
         "@peerbit/example-many-chat-rooms": "^0.0.1",
-        "@peerbit/react": "^0.0.1",
+        "@peerbit/react": "^0.0.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-use": "^17.4.0",
