--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -31,7 +31,7 @@
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.0.8",
         "path-browserify": "^1.0.1",
-        "peerbit": "*",
+        "peerbit": "^1.1.5",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.8.0",
