--- a/packages/file-share/cli/package.json
+++ b/packages/file-share/cli/package.json
@@ -38,18 +38,15 @@
         "test:integration": "node ../../../node_modules/.bin/jest test -c  ../../../jest.config.integration.ts --runInBand --forceExit"
     },
     "devDependencies": {
-        "@peerbit/network-utils": "^0.0.2",
         "@peerbit/test-utils": "^1.0.12",
         "@types/yargs": "^17.0.24",
-        "peerbit": "^1.1.5",
         "typescript": "^5.1.3"
     },
     "dependencies": {
-        "@peerbit/file-share": "^0.0.2",
+        "@peerbit/please-lib": "^0.0.3",
+        "@peerbit/network-utils": "^0.0.2",
+        "peerbit": "^1.1.5",
         "chalk": "^5.3.0",
         "yargs": "^17.7.2"
-    },
-    "peerDependencies": {
-        "peerbit": "^1.1.5"
     }
 }
