--- a/packages/one-chat-room/frontend/package.json
+++ b/packages/one-chat-room/frontend/package.json
@@ -16,7 +16,7 @@
         "peerbit": "^1.1.5",
         "@peerbit/document": "^1.1.8",
         "@peerbit/peer-names": "^0.0.1",
-        "@peerbit/react": "^0.0.2",
+        "@peerbit/react": "*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-use": "^17.4.0",
