--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -25,7 +25,10 @@
         "react-use": "^17.4.0",
         "react-router-dom": "^6.8.0",
         "@yaireo/tagify": "^4.17.8",
-        "react-icons": "^4.10.1"
+        "react-icons": "^4.10.1",
+        "@radix-ui/react-toggle": "^1.0.3",
+        "@headlessui/react": "^1.7.15",
+        "axios": "^1.4.0"
     },
     "devDependencies": {
         "@types/yaireo__tagify": "4.17.0",
