--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,3 +47,7 @@ jobs:
         aws s3 sync ./packages/text-document/frontend/dist/ s3://text-dao-xyz-dist --delete
         aws cloudfront create-invalidation --distribution-id E20VZBTENI3CAA --paths '/*';
 
+    - name: Deploy files
+      run: | 
+        aws s3 sync ./packages/text-document/frontend/dist/ s3://files-dao-xyz-dist --delete
+        aws cloudfront create-invalidation --distribution-id E20VZBTENI3CAA --paths '/*';
