--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,4 @@ jobs:
     - name: Deploy files
       run: | 
         aws s3 sync ./packages/file-share/frontend/dist/ s3://files-dao-xyz-dist --delete
-        aws cloudfront create-invalidation --distribution-id E20VZBTENI3CAA --paths '/*';
+        aws cloudfront create-invalidation --distribution-id E3UHSOW1JKZXR8 --paths '/*';
