--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
             "packages/name-service/*",
             "packages/social-media-app/*",
             "packages/one-chat-room/*",
+            "packages/many-chat-rooms/*",
             "packages/collaborative-learning/*"
         ],
         "nohoist": [
@@ -58,7 +59,7 @@
         "eslint-config-react-app": "^7.0.1",
         "jest": "^29.5.0",
         "jest-extended": "^4.0.0",
-        "lerna": "^5.5.1",
+        "lerna": "^7.3.0",
         "prettier": "^2.7.1",
         "shx": "^0.3.4",
         "start-server-and-test": "^1.14.0",
