--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@peerbit/react",
-    "version": "0.0.4",
+    "version": "0.0.5",
     "homepage": "https://dao-xyz.github.io/peerbit-examples",
     "module": "lib/esm/index.js",
     "types": "lib/esm/index.d.ts",
@@ -22,18 +22,18 @@
         "react": "*"
     },
     "dependencies": {
-        "detectincognitojs": "^1.3.0",
+        "@chainsafe/libp2p-yamux": "^5.0.0",
         "@libp2p/webrtc": "^3.2.1",
         "@peerbit/proxy-window": "^1.0.1",
         "@types/react": "^18.0.25",
         "@types/react-dom": "^18.0.8",
+        "detectincognitojs": "^1.3.0",
         "path-browserify": "^1.0.1",
         "peerbit": "^2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.16.0",
-        "react-use": "^17.4.0",
-        "@chainsafe/libp2p-yamux": "^5.0.0"
+        "react-use": "^17.4.0"
     },
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
