--- a/packages/file-share/frontend/public/manifest.json
+++ b/packages/file-share/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Text",
-    "name": "Text",
+    "short_name": "file share",
+    "name": "File share",
     "icons": [],
     "start_url": ".",
     "display": "standalone",
