--- a/packages/blog-platform/server/package.json
+++ b/packages/blog-platform/server/package.json
@@ -1,15 +1,11 @@
 {
-    "name": "@dao-xyz/social",
-    "version": "0.0.4",
+    "name": "@peerbit/blog-server",
+    "version": "0.0.1",
     "author": "dao.xyz",
     "repository": "https://github.com/@dao-xyz/peerbit-examples",
     "license": "Apache-2.0",
     "type": "module",
-    "private": false,
-    "publishConfig": {
-        "access": "public"
-    },
-    "sideEffects": false,
+    "private": true,
     "module": "lib/esm/index.js",
     "types": "lib/esm/index.d.ts",
     "exports": {
@@ -30,16 +26,19 @@
         "build": "yarn clean && tsc -p tsconfig.json",
         "test": "node ../../../node_modules/.bin/jest test  -c  ../../../jest.config.ts --runInBand --forceExit",
         "test:unit": "node ../../../node_modules/.bin/jest test  -c  ../../../jest.config.unit.ts --runInBand --forceExit",
-        "test:integration": "node ../../../node_modules/.bin/jest test -c  ../../../jest.config.integration.ts --runInBand --forceExit"
+        "test:integration": "node ../../../node_modules/.bin/jest test -c  ../../../jest.config.integration.ts --runInBand --forceExit",
+        "watch": "nodemon"
     },
     "devDependencies": {
         "@peerbit/test-utils": "^2",
-        "typescript": "^5.3.3"
+        "typescript": "^5.3.3",
+        "@types/express": "^4",
+        "nodemon": "^3"
     },
     "dependencies": {
-        "@dao-xyz/app-service": "^0.0.6",
-        "@peerbit/document": "^6",
+        "express": "^4",
         "peerbit": "^4",
-        "uuid": "^9.0.0"
+        "@peerbit/blog-sdk": "^0.0.1",
+        "body-parser": "^1"
     }
 }
