--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -47,8 +47,7 @@
     "scripts": {
         "clean": "shx rm -rf lib/*",
         "build": "yarn clean && tsc -p tsconfig.json",
-        "test": "jest",
-        "postbuild": "echo '{\"type\":\"module\"} ' | node ../../node_modules/.bin/json > lib/esm/package.json"
+        "test": "jest"
     },
     "eslintConfig": {
         "extends": [
