--- a/package.json
+++ b/package.json
@@ -46,8 +46,8 @@
         "@typescript-eslint/parser": "^6.16.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
-        "prettier": "^2.7.1",
         "eslint-config-react-app": "^7.0.1",
+        "prettier": "^2.7.1",
         "jest": "^29.7.0",
         "jest-extended": "^4.0.2",
         "lerna": "^8.0.1",
@@ -57,6 +57,7 @@
         "ts-node": "^10.9.1",
         "typescript": "^5.3.3",
         "typescript-esm": "^2.0.0",
-        "json": "^11.0.0"
+        "json": "^11.0.0",
+        "rollup-plugin-copy": "^3.5.0"
     }
 }
