--- a/packages/collaborative-learning/frontend/package.json
+++ b/packages/collaborative-learning/frontend/package.json
@@ -6,7 +6,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite",
-        "start": "vite --https false",
+        "start": "vite",
         "start-remote": "vite --mode staging",
         "build": "tsc && vite build",
         "preview": "vite preview",
@@ -14,7 +14,7 @@
     },
     "dependencies": {
         "peerbit": "^4",
-        "@peerbit/document": "^6",
+        "@peerbit/document": "^7",
         "@tensorflow/tfjs": "^4.2.0",
         "@peerbit/react": "*",
         "react": "^18.2.0",
@@ -31,7 +31,8 @@
         "@types/react-dom": "^18.2.18",
         "@vitejs/plugin-react": "^4",
         "typescript": "^5.3.3",
-        "vite": "^5.0.12"
+        "vite": "^5.3.5",
+        "@peerbit/vite": "^1"
     },
     "browserslist": {
         "production": [
