--- a/packages/file-share/frontend/package.json
+++ b/packages/file-share/frontend/package.json
@@ -41,11 +41,12 @@
         "@types/react-dom": "^18.2.18",
         "@vitejs/plugin-react": "^4",
         "typescript": "^5.3.3",
-        "vite": "^5.0.12",
+        "vite": "^5.3.5",
         "tailwindcss": "^3.3.3",
         "postcss": "^8.4.26",
         "autoprefixer": "^10.4.14",
-        "vite-plugin-static-copy": "^1.0.1"
+        "vite-plugin-static-copy": "^1.0.1",
+        "@peerbit/vite": "^1"
     },
     "browserslist": {
         "production": [
