--- a/packages/social-media-app/frontend/package.json
+++ b/packages/social-media-app/frontend/package.json
@@ -25,7 +25,7 @@
         "react-dom": "^18.2.0",
         "react-use": "^17.4.0",
         "react-router-dom": "^6.16.0",
-        "@yaireo/tagify": "^4.18.3",
+        "@yaireo/tagify": "^4.27.0",
         "react-icons": "^4.10.1",
         "@radix-ui/react-toggle": "^1.0.3",
         "@headlessui/react": "^1.7.15",
@@ -37,10 +37,11 @@
         "@types/react-dom": "^18.2.18",
         "@vitejs/plugin-react": "^4",
         "typescript": "^5.3.3",
-        "vite": "^5.0.12",
+        "vite": "^5.3.5",
         "tailwindcss": "^3.3.3",
         "postcss": "^8.4.26",
-        "autoprefixer": "^10.4.14"
+        "autoprefixer": "^10.4.14",
+        "@peerbit/vite": "^1"
     },
     "browserslist": {
         "production": [
