--- a/packages/text-document/frontend/package.json
+++ b/packages/text-document/frontend/package.json
@@ -14,7 +14,7 @@
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
     },
     "dependencies": {
-        "@peerbit/string": "^4",
+        "@peerbit/string": "^5",
         "peerbit": "^4",
         "@peerbit/react": "*",
         "react": "^18.2.0",
@@ -28,10 +28,11 @@
         "@types/react-dom": "^18.2.18",
         "@vitejs/plugin-react": "^4",
         "typescript": "^5.3.3",
-        "vite": "^5.0.12",
+        "vite": "^5.3.5",
         "tailwindcss": "^3.3.3",
         "postcss": "^8.4.26",
-        "autoprefixer": "^10.4.14"
+        "autoprefixer": "^10.4.14",
+        "@peerbit/vite": "^1"
     },
     "browserslist": {
         "production": [
