fix: bump peerbit

--- a/package.json
+++ b/package.json
@@ -29,33 +29,36 @@
         "build": "lerna run build --reject-cycles",
         "build-node": "cd ./packages/node/ && yarn build",
         "pub": "lerna publish --no-private",
-        "test": "node --experimental-vm-modules ./node_modules/.bin/jest test -c jest.config.ts ",
+        "test": "lerna run test",
         "fmt": "prettier --write '{*,**/*}.{js,ts,jsx,tsx,json,vue}'",
         "lint": "eslint --ext .ts . && prettier --check '{*,**/*}.{js,ts,jsx,tsx,json,vue}'",
         "lint:fix": "eslint --fix --ext .ts . && yarn fmt",
-        "nuke": "shx rm -rf {.,packages/*/*}/{node_modules,yarn.lock}"
+        "nuke": "shx rm -rf {.,packages/*/*}/{node_modules,yarn.lock}",
+        "postinstall": "mkdir -p node_modules/chai-extend && cp chai-global.js node_modules/chai-extend/chai-global.js && echo '{\"type\": \"module\"}' > node_modules/chai-extend/package.json"
     },
     "devDependencies": {
         "@types/eslint": "^8.40.2",
         "@types/eslint-plugin-prettier": "^3.1.0",
-        "@types/jest": "^29.2.3",
         "@types/node": "^17.0.32",
         "@types/prettier": "^2.4.2",
+        "@types/chai": "^4.3.18",
+        "chai": "^5.1.1",
+        "chai-as-promised": "^8",
+        "@types/chai-as-promised": "^8",
         "eslint": "^8.27.0",
+        "@types/mocha": "^10.0.7",
+        "mocha": "^10.7.0",
         "@typescript-eslint/eslint-plugin": "^6.16.0",
         "@typescript-eslint/parser": "^6.16.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-config-react-app": "^7.0.1",
         "prettier": "^2.7.1",
-        "jest": "^29.7.0",
-        "jest-extended": "^4.0.2",
         "lerna": "^8.0.1",
         "shx": "^0.3.4",
         "start-server-and-test": "^1.14.0",
-        "ts-jest": "^29.0.3",
         "ts-node": "^10.9.1",
-        "typescript": "^5.3.3",
+        "typescript": "^5.6.3",
         "typescript-esm": "^2.0.0",
         "json": "^11.0.0",
         "rollup-plugin-copy": "^3.5.0"
