--- a/packages/blog-platform/cli/package.json
+++ b/packages/blog-platform/cli/package.json
@@ -31,14 +31,12 @@
     "scripts": {
         "clean": "shx rm -rf lib/*",
         "build": "yarn clean && tsc -p tsconfig.json",
-        "test": "node ../../../node_modules/.bin/jest test  -c  ../../../jest.config.ts --runInBand --forceExit",
-        "test:unit": "node ../../../node_modules/.bin/jest test  -c  ../../../jest.config.unit.ts --runInBand --forceExit",
-        "test:integration": "node ../../../node_modules/.bin/jest test -c  ../../../jest.config.integration.ts --runInBand --forceExit",
+        "test": "mocha",
         "watch": "nodemon"
     },
     "devDependencies": {
         "@types/inquirer": "^9",
-        "typescript": "^5.3.3"
+        "typescript": "^5.6.3"
     },
     "dependencies": {
         "@inquirer/editor": "^2",
