--- a/packages/file-share/cli/package.json
+++ b/packages/file-share/cli/package.json
@@ -31,13 +31,11 @@
     "scripts": {
         "clean": "shx rm -rf lib/*",
         "build": "yarn clean && tsc -p tsconfig.json",
-        "test": "node ../../../node_modules/.bin/jest test  -c  ../../../jest.config.ts --runInBand --forceExit",
-        "test:unit": "node ../../../node_modules/.bin/jest test  -c  ../../../jest.config.unit.ts --runInBand --forceExit",
-        "test:integration": "node ../../../node_modules/.bin/jest test -c  ../../../jest.config.integration.ts --runInBand --forceExit"
+        "test": "mocha"
     },
     "devDependencies": {
         "@peerbit/test-utils": "^2",
-        "typescript": "^5.3.3"
+        "typescript": "^5.6.3"
     },
     "dependencies": {
         "@peerbit/please-lib": "^0.0.9",
