--- a/packages/live-streaming/frontend/package.json
+++ b/packages/live-streaming/frontend/package.json
@@ -10,7 +10,8 @@
         "start-remote": "vite --mode staging --config vite.config.remote.ts",
         "build": "tsc && vite build",
         "preview": "vite preview",
-        "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist"
+        "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist",
+        "test": "mocha"
     },
     "dependencies": {
         "peerbit": "^4",
@@ -19,23 +20,29 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-use": "^17.4.0",
-        "@emotion/react": "^11.11.3",
-        "@emotion/styled": "^11.11.0",
-        "@mui/material": "^5.15.7",
-        "react-router-dom": "^6.16.0",
-        "@mui/icons-material": "^5.15.7"
+        "react-icons": "^5.3.0",
+        "@radix-ui/react-slider": "^1.2.1",
+        "@radix-ui/react-dialog": "^1.1.2",
+        "@radix-ui/react-select": "^2.1.2",
+        "@radix-ui/react-dropdown-menu": "^2.1.2",
+        "@radix-ui/react-icons": "^1.3.0",
+        "react-router-dom": "^6.27.0",
+        "p-queue": "^8.0.1"
     },
     "devDependencies": {
-        "@types/audioworklet": "^0.0.46",
-        "@types/dom-mediacapture-transform": "^0.1.4",
-        "@webgpu/types": "^0.1.32",
+        "@types/audioworklet": "^0.0.60",
+        "@types/dom-mediacapture-transform": "^0.1.10",
+        "@webgpu/types": "^0.1.44",
         "@types/dom-webcodecs": "^0.1.11",
         "@types/react": "^18.2.46",
         "@types/react-dom": "^18.2.18",
         "@vitejs/plugin-react": "^4",
-        "typescript": "^5.3.3",
-        "vite": "^5.3.5",
-        "@peerbit/vite": "^1"
+        "typescript": "^5.6.3",
+        "vite": "^5.4.9",
+        "@peerbit/vite": "^1",
+        "tailwindcss": "^3.4.13",
+        "postcss": "^8.4.47",
+        "autoprefixer": "^10.4.20"
     },
     "browserslist": {
         "production": [
