--- a/packages/react-utils/package.json
+++ b/packages/react-utils/package.json
@@ -2,6 +2,7 @@
     "name": "@peerbit/react",
     "version": "0.0.9",
     "homepage": "https://dao-xyz.github.io/peerbit-examples",
+    "type": "module",
     "module": "lib/esm/index.js",
     "types": "lib/esm/index.d.ts",
     "exports": {
@@ -22,8 +23,8 @@
         "react": "*"
     },
     "dependencies": {
-        "@chainsafe/libp2p-yamux": "^6",
-        "@libp2p/webrtc": "^4",
+        "@chainsafe/libp2p-yamux": "^7",
+        "@libp2p/webrtc": "^5",
         "@peerbit/document": "^7",
         "@peerbit/proxy-window": "^3",
         "@types/react": "^18.2.46",
@@ -33,13 +34,14 @@
         "peerbit": "^4",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-router-dom": "^6.16.0",
+        "react-router-dom": "^6.27.0",
         "react-use": "^17.4.0"
     },
     "devDependencies": {
         "@babel/plugin-proposal-private-property-in-object": "^7.18.6",
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "@babel/plugin-transform-typescript": "^7.20.2",
+        "@types/node-localstorage": "^1",
         "@types/sinon": "^10.0.13",
         "node-localstorage": "^2.2.1",
         "sinon": "^15.0.1"
@@ -47,12 +49,11 @@
     "scripts": {
         "clean": "shx rm -rf lib/*",
         "build": "yarn clean && tsc -p tsconfig.json",
-        "test": "jest"
+        "test": "mocha"
     },
     "eslintConfig": {
         "extends": [
-            "react-app",
-            "react-app/jest"
+            "react-app"
         ]
     },
     "browserslist": {
