--- a/packages/live-streaming/frontend/package.json
+++ b/packages/live-streaming/frontend/package.json
@@ -13,9 +13,12 @@
         "deploy": "yarn build && NODE_DEBUG=gh-pages gh-pages -d dist",
         "test": "mocha"
     },
+    "browser": {
+        "./src/hrtime.js": "./src/hrtime.browser.js"
+    },
     "dependencies": {
         "peerbit": "^4",
-        "@peerbit/document": "^7",
+        "@peerbit/document": "^9",
         "@peerbit/react": "*",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
@@ -38,7 +41,7 @@
         "@types/react-dom": "^18.2.18",
         "@vitejs/plugin-react": "^4",
         "typescript": "^5.6.3",
-        "vite": "^5.4.9",
+        "vite": "^6.0.6",
         "@peerbit/vite": "^1",
         "tailwindcss": "^3.4.13",
         "postcss": "^8.4.47",
