--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,11 @@ jobs:
       run: |
         aws s3 sync ./packages/social-media-app/frontend/dist/ s3://demo-dao-xyz-dist --delete
         aws cloudfront create-invalidation --distribution-id E39RSPI7MIQNW2 --paths '/*';
+    
+    - name: Deploy social media app
+      run: |
+        aws s3 sync ./packages/social-media-app/frontend/dist/ s3://giga-place-dist --delete
+        aws cloudfront create-invalidation --distribution-id E2OYBN34VXT63X --paths '/*';
 
     - name: Deploy ml demo
       run: | 
